# BYBE-backend

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  prek.toml  setup.py
.github/workflows/: pr.yml  push.yml  release.yml
src/: lib.rs  main.rs
src/routes/: bestiary.rs  encounter.rs  hazard.rs  health.rs  mod.rs  npc.rs  shareable.rs  shop.rs
src/routes/pf/: bestiary.rs  encounter.rs  hazard.rs  npc.rs  shop.rs
src/routes/sf/: bestiary.rs  encounter.rs  hazard.rs  npc.rs  shop.rs
