
[package]
name = "bybe-backend"
version = "4.2.0"
authors = ["RakuJa"]
edition = "2024"
rust-version = "1.94.1"

description = "Beyond Your Bestiary Explorer (BYBE) web backend - actix-web server and HTTP routing."
readme = "README.md"
homepage = "https://api.bybe.app/"
repository = "https://github.com/RakuJa/BYBE"
license = "MIT"
publish = false

[lib]
name = "bybe_backend"
path = "src/lib.rs"

[[bin]]
name = "bybe"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
deprecated = "allow"

[lints.clippy]
struct_field_names = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
cast_possible_truncation = { level = "allow", priority = 2 }
cast_precision_loss = { level = "allow", priority = 2 }
future_not_send = { level = "allow", priority = 2 }
nursery = { level = "warn", priority = 1 }

[dependencies]
bybe = { git = "https://github.com/rakuja/BYBE", branch = "remove-unused-group-by", version="4.2.0", features = ["cache"]}
actix-web = "4.13.0"
actix-cors = "0.7.1"

utoipa = { version = "5.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "reqwest"] }

sqlx = {version = "0.9.0", features = ["postgres"]}
pglite-oxide = "0.5.0"

maplit = "1.0"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
